# yuki_health

./: README.md  docker-compose.yml
request_sample/: analyze_daily_feces.http  create_daily_record_faces.http  create_family.http
server/: .env.sample  README.md  alembic.ini  main.py  models.py  pyproject.toml
server/apps/domain/: __init__.py  daily_record.py  family.py
server/apps/infrastructure/repository/: __init__.py  daily_record_repository.py  error.py  family_repository.py  sqlalchemy_daily_record_repository.py  sqlalchemy_family_repository.py
server/apps/lib/: utils.py
server/apps/service/: __init__.py  family_faces_analyzer.py  family_feces_analyzer_prompt.md
server/apps/use_case/: __init__.py  daily_record_use_case.py  family_use_case.py
server/migrations/: env.py
server/migrations/versions/: 3601fc27855b_fix_daily_family_faces_images.py  9a6b800dca3c_create_family_table.py  b3ff753b3cec_update_daily_record_faces_images_.py  b8fe5c4d1fd7_add_created_at_updated_at_default.py  cef865c9ed94_create_daily_family_faces_images.py  ec272733623c_update_daily_record_faces_images_table.py
